--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
   "author": "Jonathan Schneider",
   "license": "MIT",
   "dependencies": {
-    "graphql": "^15.4.0",
-    "schema-dts": "^0.8.2"
+    "graphql": "^15.5.1",
+    "schema-dts": "^0.9.0"
   },
   "devDependencies": {
     "typescript": "4.1.3",
-    "@graphql-codegen/cli": "1.20.0",
-    "@graphql-codegen/typescript": "1.20.0",
-    "@graphql-codegen/typescript-operations": "1.17.13"
+    "@graphql-codegen/cli": "1.21.8",
+    "@graphql-codegen/typescript": "1.23.0",
+    "@graphql-codegen/typescript-operations": "1.18.4"
   },
   "scripts": {
-    "get-introspection": "set ENDPOINT=https://your-wordpress-blog.orlocalhost/graphql && yarn node .\\scripts\\get-introspection-json.js",
+    "get-introspection": "ENDPOINT=http://localhost:8080/graphql node ./scripts/get-introspection-json.js",
     "gen-gql": "graphql-codegen --config codegen.yml",
     "build": "tsc",
-    "try-query": "set ENDPOINT=https://shnyder.com/graphql && yarn node .\\scripts\\try-query.js"
+    "try-query": "ENDPOINT=http://localhost:8080/graphql node ./scripts/try-query.js"
   }
 }
